Fix some overflow css properties

--- a/app/assets/stylesheets/channel_bar/channel_list.scss
+++ b/app/assets/stylesheets/channel_bar/channel_list.scss
@@ -1,4 +1,5 @@
 #channel-list-container {
+  overflow: scroll;
   border-top: 1px solid rgba(142, 146, 151, 0.1);
   padding-left: 10px;
   padding-right: 10px;
