--- a/app/assets/stylesheets/main/main.scss
+++ b/app/assets/stylesheets/main/main.scss
@@ -47,6 +47,7 @@
   flex-direction: column;
   flex-grow: 1;
   max-height: 100%;
+  height: 100%;
 }
 
 #content-body-container {
